--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "1.0.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.22",
+    "react-native-svg": "^10.0.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-textinput-effects": "^0.5.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
